--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="container hero-grid">
       <div>
         <div class="eyebrow">Portfolio</div>
-        <h1 class="title">Hi, I'm <span style="background:linear-gradient(90deg,var(--brand),var(--brand-2));-webkit-background-clip:text;background-clip:text;color:transparent">Your Name</span> — Front‑End Developer</h1>
+        <h1 class="title">Hello, I'm <span style="background:linear-gradient(90deg,var(--brand),var(--brand-2));-webkit-background-clip:text;background-clip:text;color:transparent">Jirapat</span> — Electrical And Automation Engineering Technology</h1>
         <p class="subtitle">I craft fast, accessible, beautiful interfaces. I love solving product problems and turning complex ideas into simple experiences.</p>
         <div class="row">
           <a class="btn" href="#projects">See Projects</a>
