--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div class="container nav">
       <a class="brand" href="#home" aria-label="Home">
         <div class="logo">Y</div>
-        <span>Your Name</span>
+        <span>Jirapat</span>
       </a>
       <nav aria-label="Primary">
         <ul>
