--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <p class="section-sub">Brief intro — who you are, what you do, and what makes your work unique.</p>
       <div class="card">
         <p>
-          I'm a developer with a focus on performance and accessibility. I enjoy building design systems, animations, and tools that help teams move faster. Previously at <strong>Company</strong>, now freelancing.
+          I'm a Electrical And Automation Major Engineering with a focus on performance and accessibility. I enjoy building design systems, animations, and tools that help teams move faster. Previously at <strong>Company</strong>, now freelancing.
         </p>
         <div class="skills" aria-label="Skills">
           <span class="skill">TypeScript</span>
