--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <div class="grid">
         <!-- Project 1 -->
         <article class="project card" aria-labelledby="p1-title">
-          <img src="file:///C:/Users/Dell/Pictures/Screenshots/Screenshot%202025-08-24%20225109.png" alt="Project screenshot 1" />
+          <img src="Screenshot 2025-08-24 225109.png" alt="Project screenshot 1" />
           <div class="row" style="justify-content: space-between; align-items: baseline;">
             <h3 id="p1-title">SaaS Analytics Dashboard</h3>
             <div class="period">2025</div>
