--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <div class="card">
         <p>
           I'm a Electrical And Automation Engineering Major with a focus on performance and accessibility.I am a student from KMUTNB.I enjoy building design systems, automation, and tools Cad that help teams move faster. Previously at <strong>Company</strong>, now freelancing.
-        </p>
+                  <a href = "https://jirapatbk.github.io/pages/page_2/" target ="_ blank">  About me </a>    </p>
         <div class="skills" aria-label="Skills">
           <span class="skill">TypeScript</span>
           <span class="skill">React</span>
