--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                   } div{
 
                      width: calc(100% - 200px);
-                    background-color: pink;
+                    background-color: red;
                     
                   }
                   
