--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <body>
 
-<h1>My Portfolio</h1>
-
-<p>Welcome to my website</p>
+<h1 style="text-align:center;">My Portfolio</h1>
+<p style="text-align:center;">Welcome to my website</p>
 
 </body>
 </html>
