--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
+  style="background-color:powderblue;">
+
 
 <h1 style="text-align:center;">My Portfolio</h1>
 <p style="text-align:center;">Welcome to my website</p>
