--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
-  style="background-color:powderblue;">
+<body  style="background-color:powderblue;">
 
 
 <h1 style="text-align:center;">My Portfolio</h1>
