--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 
 <h1 style="text-align:center;">My Portfolio</h1>
 <p style="text-align:center;">Welcome to my website</p>
+<p style="color:blue;">Profile</p>
+<p style="color:blue;">Award</p>
+<p style="color:blue;">Activites</p>
+<p style="color:blue;">Projects</p>
 
 </body>
 </html>
