--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <p style="color:blue;">Award</p>
 <p style="color:blue;">Activites</p>
 <p style="color:blue;">Projects</p>
+<a href="https://www.w3schools.com">This is a link</a>
+<a href="https://github.io/">This is a link</a>
 
 </body>
 </html>
