--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <p style="color:blue;">Activites</p>
 <p style="color:blue;">Projects</p>
 <a href="https://www.w3schools.com">This is a link</a>
+<br>
+<a href="https://github.io/">This is a link</a>
+<br>
 <a href="https://github.io/">This is a link</a>
 
 </body>
