--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
 
 <h1 style="text-align:center;">My Portfolio</h1>
 <p style="text-align:center;">Welcome to my website</p>
-<p style="color:blue;">Profile</p>
-<p style="color:blue;">Award</p>
-<p style="color:blue;">Activites</p>
-<p style="color:blue;">Projects</p>
-<a href="https://www.w3schools.com">This is a link</a>
+
+<a href="https://www.w3schools.com">Profile</a>
 <br>
-<a href="https://github.io/">This is a link</a>
+<a href="https://github.io/">Awards</a>
 <br>
-<a href="https://github.io/">This is a link</a>
+<a href="https://github.io/">Activities</a>
+<br>
+<a href="https://github.io/">Projects</a>
+<br>
+<a href="https://github.io/">Skills</a>
+
 
 </body>
 </html>
