--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <h1 style="text-align:center;">My Portfolio</h1>
 <p style="text-align:center;">Welcome to my website</p>
 
-<a href="https://www.w3schools.com">Profile</a>
+<a href="https://jirapatbk.github.io/pages/page_2/">Profile</a>
 <br>
-<a href="https://github.io/">Projects</a>
+<a href="https://jirapatbk.github.io/pages/page_3/">Projects</a>
 <br>
-<a href="https://github.io/">Awards</a>
+<a href="https://jirapatbk.github.io/pages/page_4/">Awards</a>
 <br>
-<a href="https://github.io/">Activities</a>
+<a href="https://jirapatbk.github.io/pages/page_5/">Activities</a>
 <br>
-<a href="https://github.io/">Skills</a>
+<a href="https://jirapatbk.github.io/pages/page_6/">Skills</a>
 
 
 </body>
