--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 <a href="https://jirapatbk.github.io/pages/page_5/">Activities</a>
 <br>
 <a href="https://jirapatbk.github.io/pages/page_6/">Skills</a>
+<h2>Center an Image</h2>
+
+<p>To center an image, set the left and right margin to auto, and turn it into a block-level element.</p>
+
+<img src="Screenshot 2025-08-28 174930.png" alt="circuit" style="width:40%">
 
 
 </body>
