--- a/index.html
+++ b/index.html
@@ -22,11 +22,29 @@ img {
 <a href="https://jirapatbk.github.io/pages/page_5/">Activities</a>
 <br>
 <a href="https://jirapatbk.github.io/pages/page_6/">Skills</a>
-<h2>Center an Image</h2>
+<h2>Power electronics circuits for beginner </h2>
 
-<p>To center an image, set the left and right margin to auto, and turn it into a block-level element.</p>
+<p>Advantages and Disadvantages of circuits??</p>
 
 <img src="Screenshot 2025-08-28 174930.png" alt="circuit" style="width:40%">
+  
+  <p>Figure 1: Simple Switch with Inductor
+
+Advantage: Very simple and low-cost design.
+
+Disadvantage: When the switch turns off, the inductor generates a high voltage spike (back EMF) that can damage the switch.</p>
+<p>Figure 2: Switch with Inductor, Resistor, and Diode
+
+Advantage: The diode provides a path for the inductor current when the switch turns off, protecting the switch from voltage spikes. The resistor helps dissipate the stored energy safely.
+
+Disadvantage: The resistor causes energy loss as heat, reducing overall efficiency.</p>
+<p>Figure 3: Push-Pull or H-Bridge Configuration
+
+Advantage: Allows for bidirectional current flow and better control of the inductor. The diodes help recover energy, improving efficiency and protecting the switches.
+
+Disadvantage: More complex and expensive due to additional components and control circuitry.
+
+In summary, as the circuit complexity increases, protection and efficiency improve, but so do cost and design complexity.</p>
 
 
 </body>
