--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@ img {
 
 <img src="Screenshot 2025-08-28 174930.png" alt="circuit" style="width:40%">
   
-  <p>Figure 1: Simple Switch with Inductor
+  <p>Figure 1: Simple Switch with Inductor</p>
 
-Advantage: Very simple and low-cost design.
+<p>Advantage: Very simple and low-cost design.</p>
 
-Disadvantage: When the switch turns off, the inductor generates a high voltage spike (back EMF) that can damage the switch.</p>
-<p>Figure 2: Switch with Inductor, Resistor, and Diode
+<p>Disadvantage: When the switch turns off, the inductor generates a high voltage spike (back EMF) that can damage the switch.</p>
+<p>Figure 2: Switch with Inductor, Resistor, and Diode</p>
 
-Advantage: The diode provides a path for the inductor current when the switch turns off, protecting the switch from voltage spikes. The resistor helps dissipate the stored energy safely.
+<p>Advantage: The diode provides a path for the inductor current when the switch turns off, protecting the switch from voltage spikes. The resistor helps dissipate the stored energy safely.</p>
 
-Disadvantage: The resistor causes energy loss as heat, reducing overall efficiency.</p>
-<p>Figure 3: Push-Pull or H-Bridge Configuration
+<p>Disadvantage: The resistor causes energy loss as heat, reducing overall efficiency.</p>
+<p>Figure 3: Push-Pull or H-Bridge Configuration</p>
 
-Advantage: Allows for bidirectional current flow and better control of the inductor. The diodes help recover energy, improving efficiency and protecting the switches.
+<p>Advantage: Allows for bidirectional current flow and better control of the inductor. The diodes help recover energy, improving efficiency and protecting the switches.</p>
 
-Disadvantage: More complex and expensive due to additional components and control circuitry.
+<p>Disadvantage: More complex and expensive due to additional components and control circuitry.
 
 In summary, as the circuit complexity increases, protection and efficiency improve, but so do cost and design complexity.</p>
 
