--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ img {
 
 <p>Disadvantage: More complex and expensive due to additional components and control circuitry.
 
-In summary, as the circuit complexity increases, protection and efficiency improve, but so do cost and design complexity.</p>
+In summary, as the circuit complexity increases, protection and efficiency improve, but so do cost and design complexity 😇.</p>
 
 
 </body>
