--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ img {
 <a href="https://jirapatbk.github.io/pages/page_5/">Activities</a>
 <br>
 <a href="https://jirapatbk.github.io/pages/page_6/">Skills</a>
+<li><a href = "chronic.html">chronic web</a></li>
 <h2>Power electronics circuits for beginner </h2>
 
 <p>Advantages and Disadvantages of circuits??</p>
