--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ img {
 <br>
 <a href="https://jirapatbk.github.io/pages/page_6/">Skills</a>
 <li><a href = "chronic.html">chronic web</a></li>
+   <li><a href = "page_2.html">About me!!</a></li>
 <h2>Power electronics circuits for beginner </h2>
 
 <p>Advantages and Disadvantages of circuits??</p>
