--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 
 <p>My name is Jirapat Wongkobsilp, I am a student from institute: KING MONGKUT'S UNIVERSITY OF TECHNOLOGY NORTH BANGKOK. My major is Electrical And Automation Engineering Technology.
 </p>
-  <img width="30" height="30" alt="image" src="https://github.com/user-attachments/assets/0f1e134b-a133-40a5-a985-ac5950710181" /> - email: <p><a href ="s6612022631033@email.kmutnb.ac.th">s6612022631033@email.kmutnb.ac.th</a></p>
+  <img width="30" height="30" alt="image" src="https://github.com/user-attachments/assets/0f1e134b-a133-40a5-a985-ac5950710181" /> - email: <p><a href ="mailto:s6612022631033@email.kmutnb.ac.th">s6612022631033@email.kmutnb.ac.th</a></p>
 
 </body>
 </html>
