--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ img {
   margin-right: auto;
 }
 </style>
+  <link rel="stylesheet" href="style.css">
+  
 <body  style="background-color:powderblue;">
 
 
