--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ img {
   
 <body  style="background-color:powderblue;">
 
-
+<nav>
 <h1 style="text-align:center;">My Portfolio</h1>
 <p style="text-align:center;">Welcome to my website</p>
 
-<li><a href = "aboutme.html">About me!!</a></li>
+<a href = "aboutme.html">About me!!</a>
 <br>
 <a href="https://jirapatbk.github.io/pages/page_3/">Projects</a>
 <br>
@@ -24,7 +24,9 @@ img {
 <a href="https://jirapatbk.github.io/pages/page_5/">Activities</a>
 <br>
 <a href="https://jirapatbk.github.io/pages/page_6/">Skills</a>
-<li><a href = "chronic.html">chronic web</a></li>
+<a href = "chronic.html">chronic web</a>
+
+  </nav>
    
 <h2>Power electronics circuits for beginner </h2>
 
