Update and rename chronic.html to others.html

--- a/others.html
+++ b/others.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>
-chronic
+Others
 </title>
 
 
@@ -11,7 +11,7 @@ chronic
 <body>
 
 <h1> hello </h1>
-<p>welcome to chronic</p>
+<p>Welcome</p>
 
 
 </body>
