--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ img {
 <br>
 <a href="https://jirapatbk.github.io/pages/page_6/">Skills</a>
 <br>
-<a href = "others.html">others web</a>
+<a href = "others.html">others</a>
 
   </nav>
    
