--- a/others.html
+++ b/others.html
@@ -10,8 +10,8 @@ Others
 
 <body>
 
-<h1> hello </h1>
-<p>Welcome</p>
+<h1 text-align="center">Welcome to others web</h1>
+<p>Hello</p>
 
 
 </body>
