--- a/others.html
+++ b/others.html
@@ -10,7 +10,7 @@ Others
 
 <body>
 
-<h1 text-align="center">Welcome to others web</h1>
+<h1 style="text-align:center;">Welcome to others web</h1>
 <p>Hello</p>
 
 
