--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ img {
 <h2>Power electronics circuits for beginner </h2>
 
 <p>Advantages and Disadvantages of circuits??</p>
+<div class = "box1 "><img src="Screenshot 2025-08-28 174930.png" alt="circuit" style="width:40%"></div>
 
-<img src="Screenshot 2025-08-28 174930.png" alt="circuit" style="width:40%">
 <div>
 <table>
 <thead>
