--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@ img {
 <nav>
 <h1 style="text-align:center;">My Portfolio</h1>
 <p style="text-align:center;">Welcome to my website</p>
+<ul>
+<li><a href = "aboutme.html">About me!!</a></li>
 
-<a href = "aboutme.html">About me!!</a>
-<br>
-<a href="https://jirapatbk.github.io/pages/page_3/">Projects</a>
-<br>
-<a href="https://jirapatbk.github.io/pages/page_4/">Awards</a>
-<br>
-<a href="https://jirapatbk.github.io/pages/page_5/">Activities</a>
-<br>
-<a href="https://jirapatbk.github.io/pages/page_6/">Skills</a>
-<br>
-<a href = "others.html">others</a>
+<li><a href="https://jirapatbk.github.io/pages/page_3/">Projects</a></li>
+
+<li><a href="https://jirapatbk.github.io/pages/page_4/">Awards</a></li>
+
+<li><a href="https://jirapatbk.github.io/pages/page_5/">Activities</a></li>
+
+<li><a href="https://jirapatbk.github.io/pages/page_6/">Skills</a></li>
+
+<li><a href = "others.html">others</a></li>
+  </ul>
 
   </nav>
    
