--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ img {
 <nav>
 <h1 style="text-align:center;">My Portfolio</h1>
 <p style="text-align:center;">Welcome to my website</p>
+<div class="menu">
 <ul>
 <li><a href = "aboutme.html">About me!!</a></li>
 
@@ -27,6 +28,7 @@ img {
 
 <li><a href = "others.html">others</a></li>
   </ul>
+ </div>
 
   </nav>
    
