--- a/others.html
+++ b/others.html
@@ -11,7 +11,7 @@ Others
 <body>
 
 <h1 style="text-align:center;">Welcome to others web</h1>
-<p>Hello,I am interesting Power Electronics, Embedded system and Web Development extremely.I am studying them further. I intend to experiment circuits with Multisim or Psim for design circuit and programming HTML and CSS</p>
+<p>Hello,I am interesting Power Electronics, Embedded system and Web Development extremely.I am studying them further. I intend to experiment circuits with Multisim or Psim for design circuit with development embedded system and programming HTML and CSS</p>
 
 
 </body>
