--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ img {
 <p style="text-align:center;">Welcome to my website</p>
 <div class="menu">
 <ul>
-<li><a href = "aboutme.html">About me!!</a></li>
+<li><a href = "aboutme.html">About me!!</a></li> 
 
-<li><a href="https://jirapatbk.github.io/pages/page_3/">Projects</a></li>
+<li><a href="https://jirapatbk.github.io/pages/page_3/My pojects.html">Projects</a></li>
 
 <li><a href="https://jirapatbk.github.io/pages/page_4/">Awards</a></li>
 
