--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ img {
 <ul>
 <li><a href = "aboutme.html">About me!!</a></li> 
 
-<li><a href="https://jirapatbk.github.io/pages/page_3/My pojects.html">Projects</a></li>
+<li><a href="My pojects.html">Projects</a></li>
 
 <li><a href="https://jirapatbk.github.io/pages/page_4/">Awards</a></li>
 
