--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -5,8 +5,10 @@
 </head>
  <body  style="background-color:powderblue;">
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>My Projects</h1>
+<p>My coding with python </p>
+
+  <img src="img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
 
 </body>
 </html>
