--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -6,9 +6,12 @@
  <body  style="background-color:powderblue;">
 
 <h1>My Projects</h1>
-<p>My coding with python </p>
+<p>My coding with python  </p>
 
-  <img src="img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
+  <img src="factorial with python.png" alt="Flowers in Chania" width="460" height="345">
+
+
+  <p> This code is designed to adapt to find the values of factorials and store them in a list. This Coding makes me understand more working of the Python language   </p>
 
 </body>
 </html>
