--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -8,7 +8,7 @@
 <h1>My Projects</h1>
 <p>My coding with python  </p>
 
-  <img src="factorial with python.png" alt="python code">
+  <img src="factorial with python.png" alt="python code" style="width:500px;height:600px;">
 
 
   <p> This code is designed to adapt to find the values of factorials and store them in a list. This Coding makes me understand more working of the Python language   </p>
