--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -3,6 +3,7 @@
 <head>
 <title>Page Title</title>
 </head>
+ <link rel="stylesheet" href="code.css">
  <body  style="background-color:powderblue;">
 
 <h1>My Projects</h1>
