--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -11,8 +11,7 @@
 <h1>My Projects</h1>
 <p>My coding with python  </p>
 
-  <div> <img src="factorial with python.png" alt="python code" style="width:150px;height:150px;"> </div>
-
+  <img src="factorial with python.png" >
 
   <p> This code is designed to adapt to find the values of factorials and store them in a list. This Coding makes me understand more working of the Python language   </p>
 
