--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -3,7 +3,6 @@
 <head>
 <title>Page Title</title>
 
- <link rel="codesheet" href="code.css">
 </head>
  
  <body  style="background-color:powderblue;">
@@ -26,7 +25,7 @@
   <p> This code is designed to adapt to find the values of factorials and store them in a list. This Coding makes me understand more working of the Python language   </p>
 
 
-  <img src="factorial with python.png" >
+  <img src="factorial with python.png"style="width:500px;height:600px;" >
 
 
 </body>
