--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -25,7 +25,7 @@
   <p> This code is designed to adapt to find the values of factorials and store them in a list. This Coding makes me understand more working of the Python language   </p>
 
 
-  <img src="factorial with python.png"style="width:500px;height:600px;" >
+  <img src="Screenshot 2025-12-13 004303.png"style="width:400px;height:300px;" >
 
 
 </body>
