--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -25,7 +25,7 @@
   <p> This code is designed to adapt to find the values of factorials and store them in a list. This Coding makes me understand more working of the Python language   </p>
 
 
-  <img src="images/Screenshot 2025-12-13 124659.jpg">
+  <img src="images/Screenshot 2025-12-13 124659.jpg"width="150px" height="150px">
 
 
 </body>
