--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -28,5 +28,8 @@
   <img src="images/Screenshot 2025-12-13 124659.jpg"width="150px" height="150px">
 
 
+  <img src="w3schools.jpg" alt="W3Schools.com" width="500" height="1000">
+
+
 </body>
 </html>
