--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -1,35 +1,60 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
+<body>
 
-</head>
- 
- <body>
+<h2>HTML Images</h2>
+<p>HTML images are defined with the img tag:</p>
 
-<h1>My Projects</h1>
-<p>My coding with python  </p>
-
-  
-
-  
+<img src="w3schools.jpg" alt="W3Schools.com" width="500" height="1000">
 
 
 
 
 
 
-  
-  
 
-  <p> This code is designed to adapt to find the values of factorials and store them in a list. This Coding makes me understand more working of the Python language   </p>
+
+
+
+
+
+ <p> This code is designed to adapt to find the values of factorials and store them in a list. This Coding makes me understand more working of the Python language   </p>
 
 
   <img src="images/Screenshot 2025-12-13 124659.jpg"width="150px" height="150px">
 
-
-  <img src="w3schools.jpg" alt="W3Schools.com" width="500" height="1000">
-
-
 </body>
 </html>
+
+  
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
