--- a/aboutme.html
+++ b/aboutme.html
@@ -15,5 +15,16 @@
   
   <img width="30" height="30" alt="image" src="https://github.com/user-attachments/assets/0f1e134b-a133-40a5-a985-ac5950710181" /> - email: <a href ="mailto:s6612022631033@email.kmutnb.ac.th">s6612022631033@email.kmutnb.ac.th</a>
 
+
+
+
+
+
+
+
+
+
+<img src="w3schools.jpg" alt="W3Schools.com" width="500" height="500">
+  
 </body>
 </html>
