--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
 
 
 
-<img src="w3schools.jpg" alt="W3Schools.com" width="500" height="500">
+<img src="Screenshot 2025-08-24 225109.png" alt="W3Schools.com" width="500" height="500">
   
 </body>
 </html>
