--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -5,7 +5,7 @@
 <h2>HTML Images</h2>
 <p>HTML images are defined with the img tag:</p>
 
-<img src="pages/page_3/Screenshot 2025-08-24 225109.png" alt="W3Schools.com" width="500" height="1000">
+<img src="pages/page_3/Screenshot 2025-12-13 124659.jpg"width="500" height="1000">
 
 
 
@@ -21,7 +21,7 @@
  <p> This code is designed to adapt to find the values of factorials and store them in a list. This Coding makes me understand more working of the Python language   </p>
 
 
-  <img src="pages/page_3/My pojects.html/images/Screenshot 2025-12-13 124659.jpg"width="150px" height="150px">
+ 
 
 </body>
 </html>
