--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -5,7 +5,7 @@
 <h2>HTML Images</h2>
 <p>HTML images are defined with the img tag:</p>
 
-<img src="pages/page_3/Screenshot 2025-12-13 124659.jpg"width="500" height="1000">
+<img src="Screenshot 2025-12-13 124659.jpg"width="500" height="1000">
 
 
 
