--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h2>HTML Images</h2>
-<p>HTML images are defined with the img tag:</p>
+<h2>My coding</h2>
+<p>Finding of Factorial with python</p>
 
 <img src="Screenshot 2025-12-13 124659.jpg"width="500" height="500">
 
