--- a/pages/page_3/My pojects.html
+++ b/pages/page_3/My pojects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-color:powderblue;">
 
 <h2>My coding</h2>
 <p>Finding of Factorial with python</p>
