--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ img {
 
 <li><a href="pages/page_3/My pojects.html">Projects</a></li>
 
-<li><a href="https://jirapatbk.github.io/pages/page_4/">Awards</a></li>
+<li><a href="pages/page_4/my Awards.html">Awards</a></li>
 
 <li><a href="https://jirapatbk.github.io/pages/page_5/">Activities</a></li>
 
