--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ img {
 
 <li><a href="pages/page_4/my Awards.html">Awards</a></li>
 
-<li><a href="https://jirapatbk.github.io/pages/page_5/">Activities</a></li>
+<li><a href="pages/page_5/Activities.html">Activities</a></li>
 
 <li><a href="https://jirapatbk.github.io/pages/page_6/">Skills</a></li>
 
