Update and rename My Skills.md to My Skills.html

--- a/pages/page_6/My Skills.html
+++ b/pages/page_6/My Skills.html
@@ -1,13 +1,13 @@
----
-layout: page
-title: Skills
-permalink: /pages/page_6/
-nav_order: 6
----
-# My skills
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
 
-## Background
+<h2>Skills</h2>
+<p>My Skills</p>
 
+
+
+ <p> 
 My software skills
 - NI Multisim
 - PSIM
@@ -21,6 +21,13 @@ My software skills
 My programming skills
 - Dev-C++ (C Language)
 - HTML,CSS (beginner)
-- Python
+- Python  </p>
+
+
+ 
+
+</body>
+</html>
+
 
 
