--- a/others.html
+++ b/others.html
@@ -8,7 +8,7 @@ Others
 
 </head>
 
-<body>
+<body style="background-color:powderblue;">
 
 <h1 style="text-align:center;">Welcome to others web</h1>
 <p>Hello,I am interesting Power Electronics, Embedded system and Web Development extremely.I am studying them further. I intend to experiment circuits with Multisim or Psim for design circuit with development embedded system and programming HTML and CSS</p>
@@ -23,3 +23,18 @@ Others
 
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
