--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ img {
 
 <li><a href="pages/page_5/Activities.html">Activities</a></li>
 
-<li><a href="https://jirapatbk.github.io/pages/page_6/">Skills</a></li>
+<li><a href="pages/page_6/My Skills.html">Skills</a></li>
 
 <li><a href = "others.html">others</a></li>
   </ul>
