--- a/pages/page_6/My Skills.html
+++ b/pages/page_6/My Skills.html
@@ -8,20 +8,20 @@
 
 
  <p> 
-My software skills
-- NI Multisim
-- PSIM
-- Proteus
-- LTspice
-- GX Works2
-- TIA Portal
-- Arduino IDE
-- Visual Studio code
+<li>My software skills</li>
+<li>- NI Multisim</li>
+<li>- PSIM</li>
+<li>- Proteus</li>
+<li>- LTspice</li>
+<li>- GX Works2</li>
+<li>- TIA Portal</li>
+<li>- Arduino IDE</li>
+<li>- Visual Studio code</li>
   
-My programming skills
-- Dev-C++ (C Language)
-- HTML,CSS (beginner)
-- Python  </p>
+<li>My programming skills</li>
+<li>- Dev-C++ (C Language)</li>
+<li>- HTML,CSS (beginner)</li>
+<li>- Python </li>   </p>
 
 
  
