--- a/pages/page_6/My Skills.html
+++ b/pages/page_6/My Skills.html
@@ -19,8 +19,8 @@
 <li>- Visual Studio code</li>
   
 <li>My programming skills</li>
-<li>- Dev-C++ (C Language)</li>
-<li>- HTML,CSS (beginner)</li>
+<li>- C </li>
+<li>- HTML,CSS </li>
 <li>- Python </li>   </p>
 
 
